# stacio

./: .Rbuildignore  .gitattributes  .gitignore  404.html  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: 0-globals.R  0001-link.R  0002-statistics.R  0003-data-type.R  0004-properties.R  0005-geometry.R  0006-provider.R  0011-band.R  0012-extent.R  0101-asset.R  1001-item.R  1002-catalog.R  1003-collection.R  1004-itemcollection.R  classes.R  extendr-wrappers.R  print.R  read_stac.R  stacio-package.R
inst/examples/: collection.json
man/: get_stac_type.Rd  read_stac.Rd  rust_get_type_name.Rd  stacio-package.Rd
reference/: index.html  index.md  read_stac.html  read_stac.md  rust_get_type_name.html  rust_get_type_name.md  stacio-package.html  stacio-package.md  stacio.html
src/: Makevars.in  Makevars.win.in  entrypoint.c  stacio-win.def
src/rust/: Cargo.toml  document.rs  vendor.tar.xz
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-print.R
