[package]
name = 'stacio'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.88'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'stacio'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
chrono = "0.4.44"
extendr-api = {version = "0.9", features = [ 'serde' ] }
geo-types = "0.7.19"
geojson = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stac = { version = "0.17.0", features = [ 'geo', 'geoparquet' ] }
stac-io = { version = "0.2.8", features = [ 'geoparquet', 'store-all' ] }
wkt = { version = "0.14.0", features = [ 'serde' ] }

[profile.release]
lto = true
codegen-units = 1
